kubernetes/apps/keycloak/keycloak-instance/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  annotations:
    gatus.home-operations.com/endpoint: "path: /realms/DarkfellaNET/.well-known/openid-configuration"
spec:
  hostnames:
    - accounts.darkfellanetwork.com
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /realms/DarkfellaNET/account
            statusCode: 302
    - backendRefs:
        - name: keycloak-service
          namespace: keycloak
          port: 8080
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-admin
  annotations:
    gatus.home-operations.com/endpoint: "path: /realms/master/.well-known/openid-configuration"
spec:
  hostnames:
    - keycloak-admin.darkfellanetwork.com
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: keycloak-service
          namespace: keycloak
          port: 8080
