kubernetes/apps/keycloak/keycloak-instance/manifests/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://51f35e2d.kubernetes-schemas-9iu.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
{
  apiVersion: "cilium.io/v2",
  kind: "CiliumNetworkPolicy",
  metadata: {
    name: "keycloak",
  },
  spec: {
    endpointSelector: {
      matchLabels: {
        app: "keycloak",
      },
    },
    ingress: [{
      fromEndpoints: [{
        matchLabels: {
          gateway.envoyproxy.io/owning-gateway-name: "external",
          io.kubernetes.pod.namespace: "envoy-gateway-system",
        },
      }],
      toPorts: [{
        ports: [{
          port: "80",
          protocol: "TCP",
        }],
      }],
    }, {
      fromEndpoints: [{
        matchLabels: {
          app.kubernetes.io/instance: "kube-prometheus-stack",
          io.kubernetes.pod.namespace: "observability",
        },
      }],
      toPorts: [{
        ports: [{
          port: "9000",
          protocol: "TCP",
        }],
      }],
    }],
    egress: [{
      toEndpoints: [{
        matchLabels: {
          io.kubernetes.pod.namespace: "kube-system",
          k8s-app: "kube-dns",
        },
      }],
      toPorts: [{
        ports: [{
          port: "53",
          protocol: "UDP",
        }, {
          port: "53",
          protocol: "TCP",
        }],
      }],
    }, {
      toEndpoints: [{
        matchLabels: {
          cnpg.io/cluster: "postgres-db",
          cnpg.io/instanceRole: "primary",
          io.kubernetes.pod.namespace: "database",
        },
      }],
      toPorts: [{
        ports: [{
          port: "5432",
          protocol: "TCP",
        }],
      }],
    }, {
      toCIDRSet: [{
        cidr: "1.179.112.0/20",
      }],
      toPorts: [{
        ports: [{
          port: "587",
          protocol: "TCP",
        }],
      }],
    }],
  },
}
---
# yaml-language-server: $schema=https://51f35e2d.kubernetes-schemas-9iu.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
{
  apiVersion: "cilium.io/v2",
  kind: "CiliumNetworkPolicy",
  metadata: {
    name: "keycloak-operator",
  },
  spec: {
    endpointSelector: {
      matchLabels: {
        app.kubernetes.io/name: "keycloak-operator",
      },
    },
    ingress: [{}],
    egress: [{
      toEntities: [
        "kube-apiserver",
      ],
      toPorts: [{
        ports: [{
          port: "6443",
          protocol: "TCP",
        }],
      }],
    }],
  },
}
